# tv.ruslanmv

./: .env.example  .gitignore  COMPLETE_FEATURES.md  DEPLOYMENT.md  INDEX.md  Makefile  PRODUCTION-DEPLOY.md  README.md  TVPlayer.tsx  UPDATE_GUIDE.md  content-generator-main.py  database-schema.sql  docker-compose.yml  env.example  frontend-package.json  mcp-server-index.ts  mcp-server-package.json  pyproject.toml  tv-ruslanmv-project-structure.md
.github/workflows/: daily-video.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py
database/: schema.sql
docs/: SETUP.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: TVPlayer.tsx
mcp-server/: Dockerfile  package.json  tsconfig.json
nginx/: nginx.conf
scripts/: analyze_packages.py  fetch_news.py  generate_audio.py  generate_script.py  generate_video.py  llm_client.py  requirements.txt  setup-ollama.sh  upload_youtube.py
video-processor/: Dockerfile  requirements.txt
video-processor/src/: main.py
web/: index.html
