[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-ruslanmv"
version = "0.1.0"
description = "Autonomous AI news channel: backend API, AI script generation, and video pipeline for TV.RuslanMV."
readme = "README.md"
# Strict 3.11 as suggested by uv and your local environment
requires-python = ">=3.11,<3.12"

authors = [
  { name = "RuslanMV TV", email = "contact@tv.ruslanmv.com" },
]

license = { text = "Proprietary" }

keywords = ["ai", "news", "video", "ollama", "crewai", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

# -----------------------------------------------------------------------------
# Core runtime deps — this is the "full stack" for:
#   - backend (FastAPI, DB, Redis)
#   - scripts (CrewAI, LangChain, TTS, news fetch)
#   - video processor (moviepy, ffmpeg-python)
#   - Jupyter + Ollama client (for local notebooks)
# -----------------------------------------------------------------------------
dependencies = [
  # --- Backend ---
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "python-multipart==0.0.6",
  "sqlalchemy==2.0.25",
  "alembic==1.13.0",
  "psycopg2-binary==2.9.9",
  "redis==5.0.1",

  # IMPORTANT: must be compatible with ollama>=0.6 → pydantic>=2.9
  "pydantic>=2.9,<3.0",
  "pydantic-settings==2.1.0",

  # IMPORTANT: must be compatible with ollama>=0.6 → httpx>=0.27
  "httpx>=0.27,<1.0",

  "requests==2.31.0",
  "python-dotenv==1.0.0",
  "python-dateutil==2.8.2",
  "pytz==2024.1",

  # --- Scripts / LLM & agents ---
  "crewai>=0.28.0",
  "crewai-tools>=0.2.0",
  "langchain>=0.1.0",
  "langchain-community>=0.0.20",
  "langchain-ibm>=0.1.0",                 # watsonx.ai
  "openai>=1.10.0",
  "anthropic>=0.18.0",
  "litellm>=1.25.0",                       # generic LLM gateway

  # News & parsing
  "beautifulsoup4>=4.12.0",                # bs4
  "feedparser>=6.0.10",

  # TTS, audio, YouTube
  "elevenlabs>=0.2.27",
  "gTTS>=2.5.0",
  "pydub>=0.25.1",
  "google-api-python-client>=2.115.0",
  "google-auth>=2.27.0",
  "google-auth-oauthlib>=1.2.0",

  # Logging / telemetry
  "loguru>=0.7.2",
  "sentry-sdk>=1.40.0",

  # --- Video processor ---
  "moviepy>=1.0.3",
  "ffmpeg-python>=0.2.0",
  "Pillow>=10.2.0",

  # --- Local notebook + Ollama client ---
  "notebook>=7.2",
  "ipykernel>=6.29",

  # Ollama client (now compatible with pydantic/httpx constraints above)
  "ollama>=0.6,<1.0",
]

# -----------------------------------------------------------------------------
# Optional extras: you can do:
#   uv add ".[dev]"
#   uv add ".[lab]"
# -----------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
  "mypy>=1.8.0",
  "flake8>=7.0.0",
]
lab = [
  "jupyterlab>=4.2",
]

# -----------------------------------------------------------------------------
# Packaging: this project is mostly scripts + services,
# we do *not* expose it as an importable library package.
# -----------------------------------------------------------------------------
[tool.setuptools]
packages = []

# -----------------------------------------------------------------------------
# Ruff config
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "F", "E", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# pytest config (optional, if you add tests/)
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests",
]
