[project]
name = "tv-ruslanmv"
version = "2.0.0"
description = "The First TV Channel for AI Agents and Humans - Automated AI News Videos"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ruslan Magana Vsevolodovna", email = "support@ruslanmv.com" }
]
keywords = ["ai", "video", "automation", "ollama", "watsonx", "crewai", "youtube"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# CORE DEPENDENCIES
# ============================================================================

dependencies = [
    # Core AI/LLM Libraries
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-ibm>=0.1.0",

    # LLM providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "litellm>=1.25.0",

    # Data Processing & Web Scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "feedparser>=6.0.10",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.0",

    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "redis>=5.0.0",

    # Video & Audio Processing
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "pydub>=0.25.1",

    # Text-to-Speech
    "elevenlabs>=0.2.27",
    "gtts>=2.5.0",

    # YouTube Integration
    "google-api-python-client>=2.115.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",

    # API & Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data Science & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pypistats>=1.5.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "jinja2>=3.1.3",
    "loguru>=0.7.2",
    "sentry-sdk>=1.40.0",
]

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================

[project.optional-dependencies]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

# Testing only
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

# Production monitoring
monitoring = [
    "prometheus-client>=0.19.0",
    "grafana-api>=1.0.3",
]

# All extras
all = [
    "tv-ruslanmv[dev,test,monitoring]",
]

# ============================================================================
# PROJECT URLS
# ============================================================================

[project.urls]
Homepage = "https://tv.ruslanmv.com"
Repository = "https://github.com/ruslanmv/tv.ruslanmv"
Documentation = "https://github.com/ruslanmv/tv.ruslanmv/blob/main/docs/SETUP.md"
Issues = "https://github.com/ruslanmv/tv.ruslanmv/issues"

# ============================================================================
# BUILD SYSTEM
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

# ============================================================================
# TOOL CONFIGURATION
# ============================================================================

# Black - Code Formatter
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
)/
'''

# isort - Import Sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]

# Pytest - Testing
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage
[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# MyPy - Type Checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "moviepy.*",
    "elevenlabs.*",
    "newspaper.*",
]
ignore_missing_imports = true

# Ruff - Fast Linter (Alternative to flake8)
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# ============================================================================
# UV CONFIGURATION
# ============================================================================

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

# ============================================================================
# SCRIPTS & ENTRY POINTS
# ============================================================================

[project.scripts]
tv-fetch-news = "scripts.fetch_news:main"
tv-analyze-packages = "scripts.analyze_packages:main"
tv-generate-script = "scripts.generate_script:main"
tv-generate-audio = "scripts.generate_audio:main"
tv-generate-video = "scripts.generate_video:main"
tv-upload-youtube = "scripts.upload_youtube:main"
